@@ -54,18 +54,18 @@
 ;; TODO: The regexp() functions and sscanf() should be able to handle '\0' as
 ;; TODO:: data byte, not as terminator.
               
-(Project-Version lpmud 3-3 645)
-(Parent-Version lpmud 3-3 644)
+(Project-Version lpmud 3-3 646)
+(Parent-Version lpmud 3-3 645)
 (Version-Log "
-  - (smalloc.c) Corrected some bugs in the extended statistics.
-  - (comm, simulate.c, mudlib/sys/debug_info.h) Added statistics for
-        the incoming network traffic, and also display the total
-        amount of data sent/received in the 'status tables' command.
+  - (func_spec, lex, prolang.y, interpret.c) New pragma 'range_check'
+        allows to check the validity of array ranges at runtime - these
+        are the range checks currently controlled by the warn_deprecated
+        pragma.
 ")
 (New-Version-Log 
 ""
 )
-(Checkin-Time "Sat, 08 Jan 2005 01:57:17 -0700")
+(Checkin-Time "Sat, 08 Jan 2005 20:44:46 -0700")
 (Checkin-Login lars)
 (Populate-Ignore ("~$" "\\.o$" "core$" "\\.emacs" "\\.a$" "\\.deps"
                   "\\.gz$" "\\.orig$" "\\.rej$" "\\.xSYM" "^driver$"
@@ -103,8 +103,8 @@
   (README (lpmud/n/0_README 1.4.1.1 644))
   (COPYRIGHT (lpmud/d/20_Copyright 1.10.1.12 644))
   (CREDITS (lpmud/d/22_CREDITS 1.70.1.84 644))
-  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.708 644))
-  (HISTORY (lpmud/f/49_HISTORY 1.385.1.6 644))
+  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.709 644))
+  (HISTORY (lpmud/f/49_HISTORY 1.385.1.7 644))
   (INSTALL (lpmud/d/18_INSTALL 1.11.1.21 644))
   (COPYING.LIB (lpmud/k/14_COPYING.LI 1.2 644))
 
@@ -194,9 +194,9 @@
   (src/heartbeat.c (lpmud/m/42_heartbeat. 1.18.1.9 644))
   (src/i-svalue_cmp.h (lpmud/a/b/20_i-svalue_c 1.4 644))
   (src/interpret.h (lpmud/b/13_interpret. 1.33.1.40 644))
-  (src/interpret.c (lpmud/b/14_interpret. 1.125.1.103.1.54.1.81 644))
-  (src/lex.h (lpmud/b/11_lex.h 1.16.1.15.1.12 644))
-  (src/lex.c (lpmud/b/12_lex.c 1.62.1.71.1.74.1.4 644))
+  (src/interpret.c (lpmud/b/14_interpret. 1.125.1.103.1.54.1.82 644))
+  (src/lex.h (lpmud/b/11_lex.h 1.16.1.15.1.13 644))
+  (src/lex.c (lpmud/b/12_lex.c 1.62.1.71.1.74.1.5 644))
   (src/main.h (lpmud/f/31_main.h 1.14.1.4.1.19 644))
   (src/main.c (lpmud/b/8_main.c 1.60.1.43.1.68 644))
   (src/mapping.h (lpmud/f/30_mapping.h 1.12.1.20 644))
@@ -325,7 +325,7 @@
   (src/port.h (lpmud/38_port.h 1.30.1.4.1.20 644))
   (src/port.c (lpmud/39_port.c 1.17.1.9 644))
   (src/prolang.h (lpmud/f/19_prolang.h 1.17.1.5 644))
-  (src/prolang.y (lpmud/37_prolang.y 1.65.1.84.1.65.1.76.1.2 644))
+  (src/prolang.y (lpmud/37_prolang.y 1.65.1.84.1.65.1.76.1.3 644))
   (src/ptrtable.h (lpmud/m/26_ptrtable.h 1.4 644))
   (src/ptrtable.c (lpmud/m/27_ptrtable.c 1.7.1.2 644))
   (src/random.h (lpmud/f/18_random.h 1.3 644))
@@ -361,7 +361,7 @@
   (src/xptmalloc.c (lpmud/d/b/10_xptmalloc. 1.5 644))
 
   ;; Build files
-  (src/func_spec (lpmud/c/31_func_spec 1.53.1.45.1.22.1.39.1.2 644))
+  (src/func_spec (lpmud/c/31_func_spec 1.53.1.45.1.22.1.39.1.3 644))
   (src/string_spec (lpmud/f/6_string_spe 1.14.1.17.1.2 644))
   (src/mkfunc.c (lpmud/l/14_mkfunc.c 1.1 644))
   (src/make_func.y (lpmud/b/7_make_func. 1.25.1.30.1.12 644))
@@ -1287,7 +1287,7 @@
   (doc/LPC/mappings (lpmud/l/42_mappings 1.7 644))
   (doc/LPC/modifiers (lpmud/s/48_modifiers 1.9 644))
   (doc/LPC/operators (lpmud/m/0_operators 1.9.1.13 644))
-  (doc/LPC/pragma (lpmud/r/33_pragma 1.18 644))
+  (doc/LPC/pragma (lpmud/r/33_pragma 1.19 644))
   (doc/LPC/preprocessor (lpmud/r/34_preprocess 1.5 644))
   (doc/LPC/references (lpmud/c/48_references 1.3 644))
   (doc/LPC/structs (lpmud/a/b/16_structs 1.12 644))
