@@ -1,6 +1,12 @@
 This file lists all changes made to the game driver in all gory detail.
 See the file HISTORY for a user-oriented summary of all the changes.
 
+08-Jan-2004 (Lars Duening)  (3.3.646)
+  - (func_spec, lex, prolang.y, interpret.c) New pragma 'range_check'
+        allows to check the validity of array ranges at runtime - these
+        are the range checks currently controlled by the warn_deprecated
+        pragma.
+
 08-Jan-2004 (Lars Duening)  (3.3.645)
   - (smalloc.c) Corrected some bugs in the extended statistics.
   - (comm, simulate.c, mudlib/sys/debug_info.h) Added statistics for
